quick fix - fix github image overlay on firefox

--- a/styles/smacss/base.css
+++ b/styles/smacss/base.css
@@ -90,6 +90,10 @@ textarea {
   transition: 1s ease;
 }
 
+.github-img{
+  height: 100px;
+}
+
 /**
  *  -------------------
  *  - Mobile Nav -
