--- a/styles/style.css
+++ b/styles/style.css
@@ -4,82 +4,3 @@
 @import 'smacss/module.css';
 @import 'smacss/state.css';
 @import 'smacss/theme.css';
-
-.section .fp-tableCell {
-  display: flex;
-  justify-content: center;
-}
-
-#work-mobile {
-  display: none;
-}
-
-p.abs-class {
-  top: 40%;
-}
-
-@media screen and (max-width: 900px) {
-  .section .fp-tableCell {
-    display: table-cell;
-  }
-
-  .item-center {
-    margin: auto;
-    text-align: center;
-  }
-
-  .item-center.avatar-container {
-    width: 30vw;
-    margin: 10% auto;
-  }
-
-  .txt-right {
-    text-align: center;
-    margin: auto 10%;
-  }
-
-  #contact-me.flex {
-    display: block;
-  }
-
-  textarea {
-    width: 90%;
-    height: 150px;
-  }
-
-  #contact-me input:nth-of-type(5) {
-    width: 90%;
-  }
-
-  .flex > input {
-    width: 90%;
-    height: 50px;
-  }
-
-  #work-desktop {
-    display: none;
-  }
-
-  #work-mobile {
-    display: block;
-  }
-
-  div#work-mobile .flex.flex-column.item-center {
-    padding: 5%;
-  }
-
-  #work-mobile .title {
-    font-size: 100%;
-    text-align: left;
-  }
-
-  #work-mobile .sub-title {
-    font-size: 1rem;
-    text-align: right;
-  }
-
-  .about {
-    text-align: left;
-    width: 85%;
-  }
-}
